tests/macro-tests/cases/widget_new/missing_value5.stderr
error: expected expression, found `)`
  --> cases/widget_new/missing_value5.rs:6:13
   |
6  |       let _ = Wgt! {
   |  _____________^
7  | |         cursor =
8  | |         #[allow(unused_imports)]
9  | |         margin = {
...  |
13 | |     };
   | |_____^ expected expression
   |
   = note: this error originates in the macro `zng::__proc_macro_util::widget::widget_new` which comes from the expansion of the macro `Wgt` (in Nightly builds, run with -Z macro-backtrace for more info)

error: expected `;`
 --> cases/widget_new/missing_value5.rs:9:9
  |
9 |         margin = {
  |         ^^^^^^

warning: unused import: `mouse::cursor`
 --> cases/widget_new/missing_value5.rs:1:32
  |
1 | use zng::{APP, layout::margin, mouse::cursor, widget::Wgt};
  |                                ^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` on by default

warning: unused import: `zng::layout::PxPoint`
  --> cases/widget_new/missing_value5.rs:10:17
   |
10 |             use zng::layout::PxPoint;
   |                 ^^^^^^^^^^^^^^^^^^^^
